[gd_scene load_steps=4 format=3 uid="uid://bnrqfhyo1ivey"]

[ext_resource type="Script" path="res://Scene/Other/WhetherUI/whether_ui.gd" id="1_xvtub"]
[ext_resource type="Texture2D" uid="uid://cg1an8a2b5v87" path="res://Art/2D/BaseSceneUI/BaseUI/UI_ButtonC.png" id="2_t6m1o"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nrnaj"]
texture = ExtResource("2_t6m1o")

[node name="WhetherUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xvtub")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.5
offset_top = -199.0
offset_right = 204.5
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="ContentLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "建造xx道路
需要xxx资源
确定建造吗"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="YesButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 72)
layout_mode = 2
theme_override_font_sizes/font_size = 44
theme_override_styles/focus = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/disabled = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/hover = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/normal = SubResource("StyleBoxTexture_nrnaj")
text = "是"

[node name="NoButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 72)
layout_mode = 2
theme_override_font_sizes/font_size = 44
theme_override_styles/focus = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/disabled = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/hover = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_nrnaj")
theme_override_styles/normal = SubResource("StyleBoxTexture_nrnaj")
text = "否"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
